pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-265-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/265-list_items.md
---
123456789. ok
